--- a/src/app.sass
+++ b/src/app.sass
@@ -13,6 +13,12 @@ main
 	line-height: 1em!important
 	*
 		line-height: 1em!important
+
+	input[type=number]
+		max-width: 5em
  	// .char
  	// 	&:hover
  	// 		background-color: white
+ 	#canvas
+ 		letter-spacing: 0px!important
+ 		font-size: 16px!important
