--- a/src/app.sass
+++ b/src/app.sass
@@ -17,8 +17,8 @@ main
 	input[type=number]
 		max-width: 5em
 	.char
-		flex-basis: 8px
-		min-width: 8px
-		max-width: 8px
+		// flex-basis: 8px
+		// min-width: 8px
+		// max-width: 8px
 		flex-grow: 0
-		height: 13px
+		// height: 13px
